--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-minimal
+title: Laboratoire 1
+description: Énoncé du laboratoire 1
+logo: img/logo-setr.png
+show_downloads: "false"
