--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ theme: jekyll-theme-minimal
 title: Laboratoire 1
 description: Énoncé du laboratoire 1
 logo: https://setr-ulaval.github.io/labo1-h21/img/logo-setr.png
-show_downloads: false
+show_downloads: "false"
