Ajustement de la présentation.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-title: Laboratoire 1
-description: Énoncé du laboratoire 1
-logo: https://setr-ulaval.github.io/labo1-h21/img/logo-setr.png
-show_downloads: "false"
+title: "GIF-3004 : Laboratoire 1"
+description: "Professeur : Christian Gagné"
+logo: https://setr-ulaval.github.io/img/UL-logo.svg
+show_downloads: false
