Ajout table des matières.

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ title: "GIF-3004 : Laboratoire 1"
 description: "Professeur : Christian Gagné"
 logo: https://setr-ulaval.github.io/img/UL-logo.svg
 show_downloads: false
+markdown: kramdown
