--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 markdown: kramdown
-theme: jekyll-theme-minimal
+theme: minimal-mistakes-jekyll
 classes: wide
 layout: single
 title: "GIF-3004 : Laboratoire 1"
