--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "GIF-3004 : Laboratoire 1"
+title: "Laboratoire 1 - GIF-3004"
 name: "Christian Gagné"
 email: christian.gagne@gel.ulaval.ca
 
@@ -20,16 +20,7 @@ defaults:
       comments: false
       share: false
       related: false
-      toc: true
-      toc_label: "Table des matières"
       sidebar:
         - title: "Systèmes embarqués temps réel - GIF-3004"
           image: https://setr-ulaval.github.io/img/UL-logo.svg
           image_alt: "Université Laval"
-          children:
-            - title: "Site GIF-3004"
-              url: https://setr-ulaval.github.io
-            - title: "GEL-GIF"
-              url: https://www.gelgif.ulaval.ca/
-            - title: "Université Laval"
-              url: https://www.ulaval.ca/
