--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Laboratoire 1 - GIF-3004"
-name: "Christian Gagné"
+name: "Université Laval"
 email: christian.gagne@gel.ulaval.ca
 
 markdown: kramdown
