--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Laboratoire 1 - GIF-3004"
+title: "Laboratoire 1 | Systèmes embarqués temps réel - GIF-3004"
 name: "Université Laval"
 email: christian.gagne@gel.ulaval.ca
 
